@startuml

title __ITEMS's Class Diagram__\n

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace items {
        class com.codecool.dungeoncrawl.logic.items.Crown {
            + Crown()
            + getTileName()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace items {
        class com.codecool.dungeoncrawl.logic.items.FullPotion {
            + FullPotion()
            + getTileName()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace items {
        class com.codecool.dungeoncrawl.logic.items.HalfPotion {
            + HalfPotion()
            + getTileName()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace items {
        abstract class com.codecool.dungeoncrawl.logic.items.Items {
            + Items()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace items {
        class com.codecool.dungeoncrawl.logic.items.Key {
            + Key()
            + getTileName()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace items {
        class com.codecool.dungeoncrawl.logic.items.Sword {
            + Sword()
            + getTileName()
        }
      }
    }
  }
  

  com.codecool.dungeoncrawl.logic.items.Crown -up-|> com.codecool.dungeoncrawl.logic.items.Items
  com.codecool.dungeoncrawl.logic.items.FullPotion -up-|> com.codecool.dungeoncrawl.logic.items.Items
  com.codecool.dungeoncrawl.logic.items.HalfPotion -up-|> com.codecool.dungeoncrawl.logic.items.Items
  com.codecool.dungeoncrawl.logic.items.Items .up.|> com.codecool.dungeoncrawl.logic.Drawable
  com.codecool.dungeoncrawl.logic.items.Items o-- com.codecool.dungeoncrawl.logic.Cell : cell
  com.codecool.dungeoncrawl.logic.items.Key -up-|> com.codecool.dungeoncrawl.logic.items.Items
  com.codecool.dungeoncrawl.logic.items.Sword -up-|> com.codecool.dungeoncrawl.logic.items.Items


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
